Update font size and hotel text style

--- a/public/style/css/stylelogin.css
+++ b/public/style/css/stylelogin.css
@@ -47,10 +47,14 @@ body {
     bottom: 0;
 }
 
+.card-title {
+    font-family: 'Dancing Script', cursive;
+}
+
 .card-signin .card-title {
     margin-bottom: 2rem;
-    font-weight: 300;
-    font-size: 1.5rem;
+    font-weight: 400;
+    font-size: 2rem;
 }
 
 .card-signin .card-body {
